--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "consign": "^0.1.6",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "express-validator": "^3.2.1"
+    "express-validator": "^3.2.1",
+    "mongodb": "^2.2.31"
   }
 }
